--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "discord.js": "^12.5.3",
+    "discord.js": "github:discordjs/discord.js",
     "dotenv": "^10.0.0"
   }
 }
