--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/SpiderMath/Reddit-Master#readme",
   "devDependencies": {
+    "@types/common-tags": "^1.8.0",
     "@types/node": "^15.12.4",
     "@typescript-eslint/parser": "^4.27.0",
     "eslint": "^7.29.0",
@@ -23,6 +24,7 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "common-tags": "^1.8.0",
     "discord.js": "github:discordjs/discord.js",
     "dotenv": "^10.0.0",
     "mongoose": "^5.12.14"
