Restart, will work with WebSub

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-	"workbench.colorTheme": "Default Dark+",
+	"workbench.colorTheme": "Midnight Flames",
 	"powermode.enabled": true,
 	"powermode.enableShake": false,
 	"powermode.enableExplosions": true,
