--- a/package.json
+++ b/package.json
@@ -15,18 +15,6 @@
     "url": "https://github.com/SpiderMath/Reddit-Master/issues"
   },
   "homepage": "https://github.com/SpiderMath/Reddit-Master#readme",
-  "devDependencies": {
-    "@types/common-tags": "^1.8.0",
-    "@types/node": "^15.12.4",
-    "@typescript-eslint/parser": "^4.27.0",
-    "eslint": "^7.29.0",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.4"
-  },
-  "dependencies": {
-    "common-tags": "^1.8.0",
-    "discord.js": "github:discordjs/discord.js",
-    "dotenv": "^10.0.0",
-    "mongoose": "^5.12.14"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
